update on documentation
